--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
     "version": 2,
     "builds": [
-        {"src": "app.py", "use": "@vercel/python"}
+      {
+        "src": "app.py",
+        "use": "@vercel/python",
+        "config": { "buildCommand": "bash build.sh" }
+      }
     ],
     "routes": [
-        {"src": "/(.*)", "dest": "app.py"}
+      {
+        "src": "/(.*)",
+        "dest": "app.py"
+      }
     ]
-}
-
+  }
